--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "highcharts": "^8.2.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
